# borg

./: .dockerignore  .env.example  .git_index  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COPYRIGHT  LICENSE  PRIVACY.md  README.md  borg.service  borg.socket  justfile  package.json
borg-rs/crates/borg-core/: Cargo.toml
borg-rs/crates/borg-core/src/: agent.rs  backup_export.rs  chat.rs  config.rs  container.rs  cron.rs  db.rs  email.rs  forge.rs  git.rs  ipc.rs  knowledge.rs  lib.rs  linked_credentials.rs  modes.rs  observer.rs  ocr.rs  parser.rs  pgcompat.rs  pipeline.rs  pipeline_maintenance.rs  registry.rs  sandbox.rs  scraper.rs  secrets.rs  sidecar.rs  stream.rs  telegram.rs  token.rs  tool_update.rs  traits.rs  types.rs
borg-rs/crates/borg-core/src/db/: cron.rs  knowledge.rs  misc.rs  mod.rs  (+3 more)
borg-rs/crates/borg-core/tests/: chat_collector_tests.rs  claude_print_timeout_tests.rs  config_tests.rs  db_parse_ts_tests.rs  db_result_propagation.rs  failure_context_tests.rs  git_tests.rs  ipc_tests.rs  knowledge_chunk_tests.rs  knowledge_size_tests.rs  knowledge_tests.rs  nonblocking_git_tests.rs  pipeline_mode_tests.rs  pipeline_state_snapshot.rs  sandbox_mode_tests.rs  sandbox_tests.rs  session_dir_tests.rs  signal_tests.rs  stream_cleanup_tests.rs  stream_phase_result_tests.rs  stream_race_tests.rs  task_helpers_tests.rs  validate_output_tests.rs  worktree_cleanup_tests.rs  worktree_dir_error_tests.rs
borg-rs/crates/borg-domains/: Cargo.toml
borg-rs/crates/borg-domains/src/: lib.rs
borg-rs/crates/borg-domains/tests/: mode_tests.rs
(+321 files in other folders)
